--- a/mainDocument.Rmd
+++ b/mainDocument.Rmd
@@ -8,3 +8,5 @@ output: html_document
 This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents.
 
 You can embed an R code chunk like this:
+
+Now the Rmd file get's more and more processed...
