first commit in the MoreContent-branch

--- a/mainDocument.Rmd
+++ b/mainDocument.Rmd
@@ -11,3 +11,7 @@ You can embed an R code chunk like this:
 
 Now the Rmd file get's more and more processed...
 Adding the new Folder
+
+Now we have to do something and therefore we create a new branch and do the changes here and then doing an
+Fast-Forward-Merge to to main-branch
+Enter more content (first commit)
