third commit in the MoreContent-branch

--- a/mainDocument.Rmd
+++ b/mainDocument.Rmd
@@ -16,3 +16,4 @@ Now we have to do something and therefore we create a new branch and do the chan
 Fast-Forward-Merge to to main-branch
 Enter more content (first commit)
 There are some even more changes necessary (second commit)
+Now there must be done some enhancements (third commit)
