Push after pull request

--- a/mainDocument.Rmd
+++ b/mainDocument.Rmd
@@ -17,3 +17,5 @@ Fast-Forward-Merge to to main-branch
 Enter more content (first commit)
 There are some even more changes necessary (second commit)
 Now there must be done some enhancements (third commit)
+
+Doing a push after the pull request
